tests/machine/x/rust/partial_application.error
line 0: compile: exit status 1
error[E0061]: this function takes 2 arguments but 1 argument was supplied
 --> /workspace/mochi/tests/machine/x/rust/partial_application.rs:5:20
  |
5 |     let mut add5 = add(5);
  |                    ^^^--- argument #2 of type `i32` is missing
  |
note: function defined here
 --> /workspace/mochi/tests/machine/x/rust/partial_application.rs:2:8
  |
2 |     fn add(a: i32, b: i32) -> i32 {
  |        ^^^         ------
help: provide the argument
  |
5 |     let mut add5 = add(5, /* i32 */);
  |                         +++++++++++

error[E0618]: expected function, found `i32`
 --> /workspace/mochi/tests/machine/x/rust/partial_application.rs:6:22
  |
5 |     let mut add5 = add(5);
  |         -------- `add5` has type `i32`
6 |     println!("{:?}", add5(3));
  |                      ^^^^---
  |                      |
  |                      call expression requires function

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0061, E0618.
For more information about an error, try `rustc --explain E0061`.

fn main() {
