tests/machine/x/rust/partial_application.rs
fn main() {
    fn add(a: i32, b: i32) -> i32 {
        return a + b;
    }
    let mut add5 = add(5);
    println!("{:?}", add5(3));
}
